--- a/wsc.css
+++ b/wsc.css
@@ -261,41 +261,25 @@ code{
   filter:drop-shadow(3px 3px 2px #0000004d);
 }
 
-/* Scrollbar body */
-*::-webkit-scrollbar { width:15px; }
+/* Scrollbar */
+*::-webkit-scrollbar { width:5px; }
 *::-webkit-scrollbar-track {
-  background-color:#e9e9e9;
-  border-radius:5px;
+  background-color:#ffffff;
+  border-radius:0px;
 }
 *::-webkit-scrollbar-thumb {
   background-color:#b2c0cc;
-  border-radius:5px;
-}
-
-/* Scrollbar textarea */
-textarea::-webkit-scrollbar { width:5px; }
-textarea::-webkit-scrollbar-track {
-  background-color:#ffffff;
   border-radius:0px;
 }
-textarea::-webkit-scrollbar-thumb {
-  background-color:#b2c0cc;
-  border-radius:0px;
-}
-
-/* Scrollbar modale users */
+#content::-webkit-scrollbar { width:13px; }
+#content::-webkit-scrollbar-track, #content::-webkit-scrollbar-thumb { border-radius:5px; }
 #users{ margin:0px 7px; }
-#users::-webkit-scrollbar {
-  width:5px;
-}
-#users::-webkit-scrollbar-track {
-  background-color:#ffffff;
-  border-radius:50px;
-}
+#users::-webkit-scrollbar-track { border-radius:50px; }
 #users::-webkit-scrollbar-thumb {
   background-color:#ebebeb;
   border-radius:50px;
 }
+
 #divPrev{
   margin-left:auto;
   display:flex;
@@ -598,6 +582,18 @@ input:focus{
   box-shadow:none;
   box-shadow:0 5px 15px #b9b9b980 !important;
   background-color: #fcfcfc;
+  display:flex;
+  flex-flow:column;
+  min-height:380px;
+  min-width:400px;
+  height:380px;
+  width:400px;
+  max-height:80%;
+}
+#m_code h4{
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 #m_code textarea{
   resize:none;
