--- a/wsc.css
+++ b/wsc.css
@@ -444,6 +444,8 @@ code{
   top: 0;
   position: absolute;
   cursor:move;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
 }
 #bdeconnexion{
   border:0px;
@@ -498,7 +500,8 @@ code{
   padding:0px !important;
 }
 #m_sc .modal-content{
-  border-color: #f3f3f3;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
 }
 .onair{
   display:inline-block;
@@ -676,26 +679,38 @@ input:focus{
   content: "png, jpg" !important;
 }
 .custom-file-label, .custom-file-label::after{border-radius: 0 0 0 0 !important;}
-.prettyprint ol.linenums > li { list-style-type: decimal !important; margin-left: 13px; color: #c3c3c3;}
-li.L1, li.L3, li.L5, li.L7, li.L9 {
+.prettyprint ol.linenums > li {
+  list-style-type: decimal !important;
+  margin-left: 19px;
+  color: #868686;
+  padding: 0px 10px !important;
+  background: content-box !important;
+}
+#code-shared.prettyprint ol.linenums > li {
+  margin-left: 13px !important;
+  color: #c3c3c3 !important;
+}
+#code-shared.prettyprint ol.linenums > li.L1,
+#code-shared.prettyprint ol.linenums > li.L3,
+#code-shared.prettyprint ol.linenums > li.L5,
+#code-shared.prettyprint ol.linenums > li.L7,
+#code-shared.prettyprint ol.linenums > li.L9 {
   background: #fafafa !important;
 }
 pre{
+  border:0px !important;
+  border-left: 5px solid #88a6be4d !important;
+  padding-left: 15px !important;
+}
+#code-shared{
   padding:10px 5px 10px 17px !important;
   background-color:#ffffff;
   border-radius:5px;
-  border: 1px dashed #e8e8e8 !important;
-}
-pre::before {
-  z-index:0;
-  content: " ";
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  right: 10px;
-  bottom: 10px ;
-  border:1px solid #e8e8e8 !important;
-  border-radius:5px;
+  border:dashed 1px #e8e8e8 !important;
+  outline:1px solid #e8e8e8;
+  outline-offset:7px;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 #share_code{
   z-index: 1;
